# plateGuard

./: .gitignore  MilestonesProject.mpp  README.md  alpr_test.py  coordRetrv.py  coord_retrv.py  cvTest.py  cvTrack.py  main.py  openalpr.defaults.conf  pilEncrypt.py  pilTest.py  scratch.txt  test.py  test2.py
CPP/: CMakeLists.txt  test  test1.cpp
CPP/ImageDecrypt/: CMakeCache.txt  CMakeLists.txt
CPP/ImageDecrypt/headers/: Receive.h
CPP/ImageDecrypt/src/: ImageDecrypt  ImageDecrypt.cpp  Receive.cpp  makefile
CPP/ImageEncrypt/: CMakeLists.txt
CPP/ImageEncrypt/headers/: Capture.h  Data.h  Encrypt.h  Transmit.h
CPP/ImageEncrypt/src/: Capture.cpp  ImageEncrypt  ImageEncrypt.cpp  Transmit.cpp  makefile
CPP/PlateDecrypt/src/: makefile
CPP/PlateEncrypt/: CMakeLists.txt
CPP/PlateEncrypt/headers/: Frame.h
CPP/PlateEncrypt/src/: Frame.cpp  PlateEncrypt.cpp  makefile
CPP/sharedHeaders/: error.h
Documents/: .~lock.plateGuard_PreliminaryDesign.odt#  Misc Notes.odt  Specifications_Template.docx  plateGuard_PreliminaryDesign.odt  plateGuard_Requirements.docx  plateGuard_SpecificationDraft.docx  plateGuard_Specifications.odt
Python/: cvTest.py  test_encrypt.py
Python/20190401/0000/: 0_0.halo  10_0.halo  11_0.halo  12_0.halo  13_0.halo  14_0.halo  15_0.halo  16_0.halo  17_0.halo  18_0.halo  19_0.halo  1_0.halo  20_0.halo  21_0.halo  22_0.halo  23_0.halo  24_0.halo  25_0.halo  26_0.halo  27_0.halo  28_0.halo  29_0.halo  2_0.halo  30_0.halo  31_0.halo  32_0.halo  33_0.halo  34_0.halo  35_0.halo  36_0.halo  37_0.halo  38_0.halo  39_0.halo  3_0.halo  40_0.halo  41_0.halo  42_0.halo  43_0.halo  44_0.halo  45_0.halo  (+21 more)
Python/imageEncrypt/: connection.py  encrypt.py  imageEncrypt.py
Python/imageFiles/: output.avi
Python/old/plateGuard_decrypt/: pilDecrypt.py
Python/old/plateGuard_encrypt/: pilEncrypt.py
Python/old/test/: car.py  config.json
Python/plateDecrypt/: decrypt.py  plateDecrypt.py  read.py  save.py
Python/plateEncrypt/: .output.swp  Car.py  Detect.py  buffer.py  car.py  config.json  dcounter.py  detect.py  encrypt.py  encrypted.txt  output  plateEncrypt.py  processing.py  save.py  server.py  tracking.py
Python/plateEncrypt/Test/: test_plate_encrypt.py
Python/plateGuard_encrypt/: coordRetrv.py
Python/test/: Log.py
plateGuard_decrypt/: main.py  pilDecrypt.py
plateGuard_encrypt/: coordRetrv.py  main.py  pilDecrypt.py  pilEncrypt.py
test/: Log.py  buffer.py  car.py  coordRetrv.py  cvTrack.py  old  pilEncrypt.py  track_test.py
